project('zlib', 'c')

lib = static_library('zlib', [
	'adler32.c',
	'compress.c',
	'crc32.c',
	'deflate.c',
	'gzclose.c',
	'gzlib.c',
	'gzread.c',
	'gzwrite.c',
	'infback.c',
	'inffast.c',
	'inflate.c',
	'inftrees.c',
	'trees.c',
	'uncompr.c',
	'zutil.c',
	],
	c_args: [
	],
	include_directories: include_directories(
	),
)
