project('wellclear', 'cpp')

incs_wellclear = include_directories(
  'DAIDALUS/C++/include'
)

lib = static_library(
  'wellclear',
  [
    'DAIDALUS/C++/src/ProjectedKinematics.cpp',
    'DAIDALUS/C++/src/KinematicGsBands.cpp',
    'DAIDALUS/C++/src/KinematicTrkBands.cpp',
    'DAIDALUS/C++/src/BandsRegion.cpp',
    'DAIDALUS/C++/src/ACCoRDConfig.cpp',
    'DAIDALUS/C++/src/KinematicVsBands.cpp',
    'DAIDALUS/C++/src/AircraftState.cpp',
    'DAIDALUS/C++/src/Vertical.cpp',
    'DAIDALUS/C++/src/KinematicBands.cpp',
    'DAIDALUS/C++/src/Units.cpp',
    'DAIDALUS/C++/src/Projection.cpp',
    'DAIDALUS/C++/src/ErrorLog.cpp',
    'DAIDALUS/C++/src/string_util.cpp',
    'DAIDALUS/C++/src/SeparatedOutput.cpp',
    'DAIDALUS/C++/src/KinematicBandsParameters.cpp',
    'DAIDALUS/C++/src/Constants.cpp',
    'DAIDALUS/C++/src/KinematicAltBands.cpp',
    'DAIDALUS/C++/src/NoneUrgencyStrategy.cpp',
    'DAIDALUS/C++/src/Util.cpp',
    'DAIDALUS/C++/src/WCV_TCPA.cpp',
    'DAIDALUS/C++/src/TCAS3D.cpp',
    'DAIDALUS/C++/src/CD2D.cpp',
    'DAIDALUS/C++/src/TCASTable.cpp',
    'DAIDALUS/C++/src/SeparatedInput.cpp',
    'DAIDALUS/C++/src/Daidalus.cpp',
    'DAIDALUS/C++/src/OrthographicProjection.cpp',
    'DAIDALUS/C++/src/ColoredValue.cpp',
    'DAIDALUS/C++/src/format.cpp',
    'DAIDALUS/C++/src/CDCylinder.cpp',
    'DAIDALUS/C++/src/CriticalVectors.cpp',
    'DAIDALUS/C++/src/ENUProjection.cpp',
    'DAIDALUS/C++/src/KinematicBandsCore.cpp',
    'DAIDALUS/C++/src/PositionUtil.cpp',
    'DAIDALUS/C++/src/DCPAUrgencyStrategy.cpp',
    'DAIDALUS/C++/src/ParameterData.cpp',
    'DAIDALUS/C++/src/CriticalVectors2D.cpp',
    'DAIDALUS/C++/src/Integerval.cpp',
    'DAIDALUS/C++/src/ParameterEntry.cpp',
    'DAIDALUS/C++/src/NavPoint.cpp',
    'DAIDALUS/C++/src/Detection3DParameterReader.cpp',
    'DAIDALUS/C++/src/FixedAircraftUrgencyStrategy.cpp',
    'DAIDALUS/C++/src/StateReader.cpp',
    'DAIDALUS/C++/src/SimpleNoPolarProjection.cpp',
    'DAIDALUS/C++/src/WCV_VMOD.cpp',
    'DAIDALUS/C++/src/ConflictData.cpp',
    'DAIDALUS/C++/src/CD3D.cpp',
    'DAIDALUS/C++/src/StateWriter.cpp',
    'DAIDALUS/C++/src/KinematicsLatLon.cpp',
    'DAIDALUS/C++/src/KinematicMultiBands.cpp',
    'DAIDALUS/C++/src/LatLonAlt.cpp',
    'DAIDALUS/C++/src/Kinematics.cpp',
    'DAIDALUS/C++/src/SequenceReader.cpp',
    'DAIDALUS/C++/src/Horizontal.cpp',
    'DAIDALUS/C++/src/WCV_TAUMOD.cpp',
    'DAIDALUS/C++/src/CriteriaCore.cpp',
    'DAIDALUS/C++/src/LossData.cpp',
    'DAIDALUS/C++/src/AziEquiProjection.cpp',
    'DAIDALUS/C++/src/TangentLine.cpp',
    'DAIDALUS/C++/src/WCV_TCOA.cpp',
    'DAIDALUS/C++/src/IntervalSet.cpp',
    'DAIDALUS/C++/src/SimpleProjection.cpp',
    'DAIDALUS/C++/src/Interval.cpp',
    'DAIDALUS/C++/src/AlertLevels.cpp',
    'DAIDALUS/C++/src/Vect3.cpp',
    'DAIDALUS/C++/src/AlertThresholds.cpp',
    'DAIDALUS/C++/src/DaidalusFileWalker.cpp',
    'DAIDALUS/C++/src/Position.cpp',
    'DAIDALUS/C++/src/BandsRange.cpp',
    'DAIDALUS/C++/src/KinematicRealBands.cpp',
    'DAIDALUS/C++/src/GreatCircle.cpp',
    'DAIDALUS/C++/src/Velocity.cpp',
    'DAIDALUS/C++/src/KinematicIntegerBands.cpp',
    'DAIDALUS/C++/src/WCVTable.cpp',
    'DAIDALUS/C++/src/WCV_tvar.cpp',
    'DAIDALUS/C++/src/Point.cpp',
    'DAIDALUS/C++/src/CD3DTable.cpp',
    'DAIDALUS/C++/src/TrafficState.cpp',
    'DAIDALUS/C++/src/WCV_HZ.cpp',
    'DAIDALUS/C++/src/Detection3DParameterWriter.cpp',
    'DAIDALUS/C++/src/WCV_TEP.cpp',
    'DAIDALUS/C++/src/StateVector.cpp',
    'DAIDALUS/C++/src/Vect2.cpp',
    'DAIDALUS/C++/src/VectFuns.cpp',
    'DAIDALUS/C++/src/TCAS2D.cpp'
  ],
  cpp_args: [
    '-std=c++11',
    '-Wno-unused-variable',
    '-Wno-comment',
  ],
  include_directories: incs_wellclear,
)

dep = declare_dependency(
  link_with: lib,
  include_directories: incs_wellclear,
)