exe_AutomationRequestTest = executable(
  'AutomationRequestTest',
  'AutomationRequestTest.cpp',
  dependencies: deps_test,
  cpp_args: cpp_args_test,
  include_directories: inc_test,
  link_with: libs_test,
  link_args: link_args_test,
)

test(
  'AutomationRequestTest',
  exe_AutomationRequestTest
)

