#srcs_functional_utilities = [
#]

#incs_functional_utilities = [
#  include_directories(
#    '../../../src/Utilities',
#    '../../../resources/AutomationDiagramDataService',
#    '../../../src/Communications',
#    '../../../src/Includes',
#    '../../../src/Services',
#    '../../../src/VisilibityLib',
#    '../../../src/Plans',
#    '../../../src/DPSS',
#    '../../../src/Tasks',
#  ),
#  incs_lmcp,
#]

#deps_functional_tests = [
#  dep_boost,
#  dep_cppzmq,
#  dep_pugixml,
#  dep_sqlite3,
#  dep_sqlitecpp,
#  dep_zeromq,
#  dep_gtest,
#]

#lib_functional_tests = static_library(
#  'funcitonal_test_utilities',
#  srcs_functional_utilities,
#  dependencies: deps_functional_tests,
#  cpp_args: cpp_args,
#  include_directories: incs_functional_utilities,
#)
