exe_WaterwaySearch_test01 = executable(
  'WaterwaySearch_test01',
  'WaterwaySearch_test01.cpp',
  dependencies: deps_test,
  cpp_args: cpp_args_test,
  include_directories: inc_test,
  link_with: libs_test,
  link_args: link_args_test,
)

test(
  'WaterwaySearch_test01',
  exe_WaterwaySearch_test01
)
