subdir('Test_AngledAreaSearchTask')
subdir('Test_BlockadeTask')
subdir('Test_CmasiAreaSearchTask')
subdir('Test_CmasiLineSearchTask')
subdir('Test_CmasiPointSearchTask')
subdir('Test_EscortTask')
subdir('Test_ImpactLineSearchTask')
subdir('Test_ImpactPointSearchTask')
subdir('Test_LoiterTask')
subdir('Test_MultiVehicleWatchTask')
subdir('Test_MustFlyTask')
subdir('Test_PatternSearchTask')
subdir('Test_RendezvousTask')
subdir('Test_WatchTask')
