exe_AngledAreaSearchTaskTests = executable(
  'AngledAreaSearchTaskTests',
  'AngledAreaSearchTaskTest.cpp',
  dependencies: deps_test,
  cpp_args: cpp_args_test,
  include_directories: inc_test,
  link_with: libs_test,
  link_args: link_args_test,
)

test(
  'AngledAreaSearchTaskTests',
  exe_AngledAreaSearchTaskTests
)
